--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Homework1</title>
 </head>
+
 <body>
-<div align="center">學
-<p>HTML</p>
-好好玩</div>
+    <div align="center">學
+        <p>HTML</p>
+        好好玩</div>
+    <hr>
+    <div align="center"><a href="index2.html" target="_self">～小王子練習作業在這裡～</a></div>
 </body>
+
 </html>
