--- a/index2.html
+++ b/index2.html
@@ -8,9 +8,9 @@
 
 <body>
     <!--<div>This line is<br> broken</div>-->
-    <div>However
-        <br> this is in the s&nbsp;&nbsp;a&nbsp;&nbsp;m&nbsp;&nbsp;e line</div>
-    <hr>
+    <!--    <div>However
+ <br> this is in the s&nbsp;&nbsp;a&nbsp;&nbsp;m&nbsp;&nbsp;e line</div>-->
+    <!--<hr>-->
     <h1>小王子</h1>
     <p>然後他又回到狐狸那裡。</p>
     <p>「再見了！」小王子說。</p>
@@ -44,9 +44,11 @@
         <tr>
             <td>分離的時候，學會道別</td>
         </tr>
-        </tr>
+
     </table>
 
+    <hr>
+    <div width="10" align="middle"><a href="index.html">回上一頁</a></div>
 </body>
 
 </html>
